<resources>
    <string name="app_name">GuideMe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">UserName</string>
    <string name="password">PassWord</string>
    <string name="submit_login">Login</string>
    <string name="deputy_director">Deputy Director  &#160; </string>
    <string name="administrative_project_manager">   Administrative Project Manager</string>
    <string name="work_location">17-17 Whatever Avenue </string>
    <string name="salary_range">$100,000 - $150,000</string>
    <string name="full_part_time">Full time</string>
    <string name="days_left_to_apply">10 Days left</string>
    <string name="business_title">Application Examiner, Bureau of Vital Statistics/Vital Statistics/Vital Records</string>
    <string name="civic_title_text">CLERICAL ASSOCIATE</string>
    <string name="jobs_id_apply_text">jobs_id_apply_text</string>
    <string name="preferred_skills_text">Must be comfortable working in a dynamic atmosphere handling multiple concurrent activities displaying excellent attention to detail; work well with a team to meet deadlines and analyze problems and potentially difficult scenarios. Knowledge of detailed record keeping systems; excellent oral, written, administrative and customer service skills. Strong working knowledge of Microsoft Office Programs such as Word, Excel and Access. Ability to speak Spanish or a language other than English is a plus.</string>
    <string name="post_date_text">2018-01-16T00:00:00</string>
    <string name="post_until_text">2018-05-11T00:00:00</string>
    <string name="residency_req_text">New York City residency is generally required within 90 days of appointment. However, City Employees in certain titles who have worked for the City for 2 continuous years may also be eligible to reside in Nassau, Suffolk, Putnam, Westchester, Rockland, or Orange County. To determine if the residency requirement applies to you, please discuss with the agency representative at the time of interview.</string>
    <string name="minimum_req_text">Qualification Requirements  A four-year high school diploma or its educational equivalent approved by a State\'s department of education or a recognized accrediting organization and one year of satisfactory clerical experience.  Skills Requirement  Keyboard familiarity with the ability to type at a minimum of 100 key strokes (20 words) per minute.t</string>
    <string name="job_description_text">**OPEN TO PERMANENT CLERICAL ASSOCIATES ONLY. YOU MUST CLEARLY STATE YOUR CIVIL SERVICE STATUS ON YOUR RESUME OR COVER LETTER. FAILURE TO DO SO WILL RESULT IN YOUR DISQUALIFICATION.   The NYC Department of Health and Mental Hygiene (DOHMH) is an agency recognized worldwide for being a leader in public health.  The Bureau of Vital Statistics is responsible for registering and certifying all birth, deaths, spontaneous and induced terminations of pregnancy in NYC.  The bureau issues, analyzes and reports on 285,000 vital events each year.  The bureau is a very large customer service operation, providing death certification services on a 24/7 basis, issuing more than 900,000 certified copies of birth and death records, and fulfilling hundreds of data requests annually.   DUTIES WILL INCLUDE BUT NOT BE LIMITED TO:   - Receive and accurately examine physical and/or electronic birth and or death correction applications and supporting documents, including, Acknowledgement of Paternity, Court Ordered Filiations, Adoption Orders and Transgender amendments; ensuring documentary evidence, identification and fee(s) are appropriately submitted. Review confidential documents submitted with application for completeness.   - Accurately complete or reject amendments according to DOHMH, Vital Records guidelines.   - Adhere to established turn-around times for accurately processing applications.   - Respond to telephone and written inquiries from customers, including other City, State and Federal agencies.   - Deliver excellent customer service when resolving and addressing customer inquiries, including with in-person customers, via email and phone.   - Perform other related clerical support functions, including assisting with special projects, testing new workflow processes, faxing, filing and indexing. Transfer cases to and from other Office of Vital Records Units as needed.</string>
    <string name="full_part_time_text">F</string>
    <string name="work_location_text">125 Worth Street, Nyc</string>
    <string name="job_category_text">Health</string>
    <string name="salary_frequency_text">Annual</string>
    <string name="salary_to_text">42072.48</string>
    <string name="salary_from_text">33875</string>
    <string name="division_work_unit_text">Vital Statistics/Vital Recor</string>
    <string name="fa_phone">212-321-9203</string>
    <string name="fa_address">40-55 10th ave , Lower Level</string>
    <string name="fa_zip">Manhattan , NY, 10034</string>
    <string name="business_title_text">Application Examiner, Bureau of Vital Statistics/Vital Statistics/Vital Records</string>
    <string name="title_activity_maps">Map</string>
    <string name="you_have_high_medical_bills">• You have high medical bills.</string>
    <string name="you_receive_supplemental_security_income_ssi">• You receive Supplemental Security Income (SSI).</string>
    <string name="you_meet_certain_financial_requirements">• You meet certain financial requirements.</string>
    <string name="teacher">Teachers and educators provide instruction in one or more subjects in private or public schools at the elementary, middle/junior high, and high school levels. Teachers specialize in adapting teaching methods and instructional materials to meet their students’ varying needs.</string>
    <string name="teacher2">An outstanding Teacher Resume, such as this Teacher Resume example, will include your number of years of experience, your education level, your subject matter expertise, and any specializations and certifications you have, including what states you’re certified to teach in.</string>
    <string name="teacher3">As shown in the Teacher Resume example, a good Teacher Resume should also highlight qualifications such as lesson plan writing and execution, designing classroom activities, preparing lesson materials, assigning homework, and maintaining student records. You might also include your communication and disciplinary skills, as well as highlight how patient you are with your students.</string>
    <string name="administrative_zssisant">Take your Administrative Assistant Resume further by highlighting achievements that address how much time or money you’ve saved the company due to your methods, actions, or implementations of systems or software.</string>
    <string name="administrative_2">Administrative Assistants provide office support by performing a wide range of duties and responsibilities. These often include basic accounting services, invoicing and payment processing, calendar scheduling, meeting organization, office supply maintenance, reception, and both internal and external correspondence.</string>
    <string name="admknistative_3">A job-winning Administrative Assistant Resume, such as this Administrative Assistant Resume example, includes the number of years of experience you have in this area, any specializations or certifications you have or earned, and your level of education.</string>
    <string name="business">Business analysts are experts in operational efficiency. They collect and analyze data on work processes and optimize the processes for increased overall efficiency, as well as increased revenue.</string>
    <string name="business2">Excellent business analyst resume examples highlight achievements and outline specific skills necessary to perform this type of job. These skills include database querying, forecasting and planning, business systems analysis, project management, and specific industry knowledge.</string>
    <string name="business3">Create a business analyst resume that will get you noticed by including your operational and analytical skills, your knowledge of specific industries, software programs you have working knowledge of, and your top work achievements.</string>
    <string name="reception">Receptionists play a big part in keeping an office or business running smoothly. Receptionists are responsible for a wide range of duties, including greeting clients, receiving delivered items, serving as the main contact for the organization, and managing the phone system.</string>
    <string name="reception2">This winning Receptionist Resume example highlights skills such as multi-line phone system knowledge, vendor coordination, security processes, data entry, and document management.</string>
    <string name="reception3">To create a Receptionist Resume that will win you the interview, be sure to focus on your unique set of skills, including your software knowledge, such as Microsoft Word and Excel; any accounting skills you have; and any relevant administrative skills that relate to the checkInit you are applying for.</string>
    <string name="human">Human Resource Managers provide an essential function at every organization. HR Managers maintain and organize employee records, are in charge of recruiting practices, manage benefits administration, and address employee relations issues.</string>
    <string name="human2">Following this Human Resource Manager Resume example, your Resume should include your unique set of HR skills, such as hiring and retention knowledge, compensation and payroll duties and administration, knowledge of labor laws, employee records management, training, and interpersonal employee relations skills.</string>
    <string name="human3">Make your Human Resource Manager Resume more comprehensive by including any industry-specific knowledge you have, your affiliations, certificates that you’ve earned, and your educational background.</string>
    <string name="office">Office Assistants provide organizational support by performing a wide range of duties and responsibilities. These often include basic accounting services, filing, sorting, inventory management, mailing, and calendar scheduling.</string>
    <string name="office2">This Office Assistant Resume example focuses on these skills and includes the number of years of experience in this area, any specializations or certifications earned, and level of education.</string>
    <string name="office3">Take your Office Assistant Resume further by including your communication and organizational skills in your Summary section, and be sure to highlight your achievements, which can be the money you’ve saved the company due to your organizational methods or implementations of new systems.</string>
    <string name="web">If you’re looking for ways to write a compelling resume as a web developer, then look no further than this Web Developer Resume example.</string>
    <string name="web2">As a web developer, you will want your resume to show how many years of experience you have in this field, your technical coding skills, design skills, as well as what types of software you are familiar with.</string>
</resources>