<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.nyc.guideme.JobDetailsActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map_details"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:context="com.nyc.guideme.JobDetailsActivity" />


    <TextView
        android:id="@+id/business_title_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/business_title"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/civic_title_details"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/civic_title_text"
        android:layout_height="wrap_content" />
  
    <TextView
        android:id="@+id/division_work_unit_details"
        android:text="@string/division_work_unit_text"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="salary from : "
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/salary_from_details"
        android:textSize="15sp"
        android:text="@string/salary_from_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:text="salary to : "
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
         <TextView
           android:id="@+id/salary_to_details"
            android:layout_width="match_parent"
             android:textSize="15sp"
             android:text="@string/salary_to_text"
        android:layout_height="wrap_content" />

    </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:textSize="15sp"
            android:text="salary frequency : "
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
      
    <TextView
        android:id="@+id/salary_to_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/salary_frequency_detail"
        android:textSize="15sp"
        android:text="@string/salary_frequency_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:text="job category : "
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/job_category_details"
        android:text="@string/job_category_text"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:text="address : "
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/work_location_details"
        android:text="@string/work_location_text"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:text="position : "
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/full_part_indicator_details"
        android:text="@string/full_part_time_text"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:layout_height="wrap_content"

        />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center">

    <TextView
        android:text="job description : "
        android:layout_marginBottom="5dp"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/job_description_details"
        android:text="@string/job_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/minimum_req_details"
        android:text="@string/minimum_req_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/residency_req_details"
        android:text="@string/residency_req_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/post_until_details"
        android:text="@string/post_until_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/post_date_details"
        android:text="@string/post_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
                
    <TextView
        android:id="@+id/prefered_skills_details"
        android:text="@string/preferred_skills_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/jobs_id_apply"
        android:text="@string/jobs_id_apply_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
