<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"


    >

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/job_ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/tv_business_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/deputy_director" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/tv_civil_service_title"
            android:text="@string/administrative_project_manager"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/job_ll_2"
        android:layout_below="@id/job_ll_1"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_location"
            android:id="@+id/location_id"

            />


        <TextView
            android:id="@+id/full_time_part_time_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_part_time"

            />



        <TextView
            android:id="@+id/post_until"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_left_to_apply"

            />


    </LinearLayout>

       <LinearLayout
           android:id="@+id/rl_ll_3"
           android:layout_toRightOf="@id/job_ll_2"
           android:layout_below="@id/job_ll_1"
           android:layout_width="wrap_content"
           android:layout_marginBottom="2dp"
           android:orientation="vertical"
           android:layout_height="match_parent">



           <TextView
            android:id="@+id/salary_id"
               android:textSize="16sp"
               android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary_range"
               android:paddingTop="50dp"

            />


       </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>