<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">


    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/job_ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/fa_medical_Center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:text="WASHINGTON HEIGHTS" />




        </LinearLayout>

        <LinearLayout
            android:id="@+id/job_ll_2"
            android:layout_below="@id/job_ll_1"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_address"
                android:id="@+id/fa_medical_location"
                android:textColor="#000000"

                />


            <TextView
                android:id="@+id/full_time_part_time_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/fa_phone"


                />



            <TextView
                android:id="@+id/post_until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
android:text="@string/fa_zip"
                />


        </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>

